<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BookRegistrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.Fragment.BookRegistrationFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/leaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave" />

        <TextView
            android:id="@+id/informations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="INFORMATIONS"
            android:text="INFORMATIONS" />

        <TextView
            android:id="@+id/profileInformationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PROFILE INFORMATIONS"
            android:text="@string/profile_informations" />
    </LinearLayout>

</FrameLayout>