<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BookRegistrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.Fragment.BookRegistrationFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="5pt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="Title..."
            android:autofillHints=""
            android:inputType="" />

        <EditText
            android:id="@+id/authorBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="Author..."
            android:textSize="5pt"
            android:autofillHints=""
            android:inputType="" />

        <EditText
            android:id="@+id/Year_of_pubblication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/yearOfPubb"
            android:textSize="5pt"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="Year of pubb..." />

        <EditText
            android:id="@+id/EditionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:hint="@string/editionNumber"
            android:textSize="5pt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="Edition number..." />

        <Spinner
            android:id="@+id/BookTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="Book type" />

        <Button
            android:id="@+id/SubmitBookReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</FrameLayout>