<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@+id/book_registration"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/book_registration" />

    <item
        android:id="@+id/isbn_scan"
        android:icon="@drawable/ic_border_left_black_24dp"
        android:title="@string/scan_isbn" />

    <item
        android:id="@+id/book_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/book_research" />
</menu>
